syntax = "proto3";

package bidding_api;

import "google/api/annotations.proto";

option go_package = "github.com/students-api/bidding-service/internal/pb/bidding_api";

service BiddingService {
  rpc PlaceBid(PlaceBidRequest) returns (PlaceBidResponse) {
    option (google.api.http) = {
      post: "/v1/bids"
      body: "*"
    };
  }

  rpc GetAuctionState(GetAuctionStateRequest) returns (GetAuctionStateResponse) {
    option (google.api.http) = {
      get: "/v1/auctions/{auction_id}/state"
    };
  }
}

message PlaceBidRequest {
  int64 auction_id = 1;
  int64 user_id = 2;
  int64 amount = 3;
}

message PlaceBidResponse {
  bool success = 1;
  string message = 2;
}

message GetAuctionStateRequest {
  int64 auction_id = 1;
}

message GetAuctionStateResponse {
  int64 current_max_bid = 1;
  int64 winner_id = 2;
}